# Chat

./: .gitignore  README.md  config.py  env.example  main.py  pyproject.toml  rag_service.py  requirements.txt  run.bat  run.sh
app/: __init__.py  __main__.py  config.py  main.py
app/services/: __init__.py  image_processor.py  rag_service.py  rag_service_faiss_backup.py
configs/: .env.example  env.example
docs/: V2.0使用指南.txt  切片策略评估报告.txt
docs/development/: FAISS到Qdrant迁移报告.md  RAG检索优化总结.md  RAG检索优化评估报告_20251117_174918.txt  会话总结-多模态RAG升级.md  前端超时处理优化.md  前端超时处理测试报告.md  端口迁移到8100测试报告.md  问题排查报告.md  项目重组总结.md  项目重组测试报告.md  项目需求.txt
docs/guides/: Markdown渲染说明.md  项目结构说明.md
docs/technical/: 多模态RAG-CLIP方案说明.md  时延分析报告.txt
scripts/: migrate_faiss_to_qdrant.py  run.bat  run.sh
static/: index.html
tests/: evaluate_ragas.py  evaluate_reranking.py
